# iceberg-demo-toolkit

./: .gitignore  Dockerfile  README.md  ansible-commands.md  ansible.cfg  constraints.txt  docker-compose.yml  playbook.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: images.yml
generator/: balloon_popper.py
generator/producer/: venicle_telematics.py
scripts/: consumer.py  generator.py
stack/: .minio.env  .nessie.env  .postgres.env  docker-compose.yml
stack/init.d/: init.sql
templates/: role_policy.j2  trust_policy.j2
